# AcademicIntelligenceAI

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
config/: config.yaml
data/evaluation/: test_queries.json
src/academic_intelligence_ai/: main.py
src/academic_intelligence_ai/evaluation/: retrieval_eval.py
src/academic_intelligence_ai/ingest/: fetch_html.py  run_extract.py
src/academic_intelligence_ai/load/: load_documents.py
src/academic_intelligence_ai/monitoring/: logger.py  pipeline_tracker.py  report.py
src/academic_intelligence_ai/query/: llm_client.py  rag.py  search.py
src/academic_intelligence_ai/transform/: chunker.py  html_to_text.py
